src/main/default/objects/Service_Type__c/Service_Type__c.object-meta.xml
<CustomObject>
    <label>Service Type</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>