src/main/default/objects/Service_Type__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the service type is active.</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>