src/main/default/objects/Service_Type__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <inlineHelpText>Line of business for which the service type is used.</inlineHelpText>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Line A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>