src/main/default/objects/Service_Type__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <inlineHelpText>Name of the service type.</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Type A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>